syntax = "proto3";

package proto;

import "cmd/cmd_scene.proto";
import "define.proto";

option go_package = "./;proto";

message PrivateChatReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5022;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 target_uid = 7;
    oneof content {
        string text = 3;
        uint32 icon = 4;
    }
}

message PrivateChatRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5048;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 chat_forbidden_endtime = 12;
    int32 retcode = 14;
}

message PrivateChatNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4962;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    ChatInfo chat_info = 7;
}

message PullPrivateChatReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4971;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 target_uid = 5;
    uint32 pull_num = 7;
    uint32 from_sequence = 12;
}

message PullPrivateChatRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4953;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated ChatInfo chat_info = 15;
    int32 retcode = 11;
}

message PullRecentChatReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5040;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 pull_num = 6;
    uint32 begin_sequence = 15;
}

message PullRecentChatRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5023;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated ChatInfo chat_info = 15;
    int32 retcode = 3;
}

message ReadPrivateChatReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5049;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 target_uid = 1;
}

message ReadPrivateChatRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4981;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 1;
}

message ChatChannelUpdateNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5025;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 channel_id = 3;
    bool is_create = 15;
    ChatChannelInfo channel_info = 14;
}

message ChatChannelInfo {
    bool is_shield = 15;
    uint32 channel_id = 8;
}

message ChatChannelDataNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 4998;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated uint32 channel_list = 3;
    repeated ChatChannelInfo channel_info_list = 7;
}

message ChatChannelShieldNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5047;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    bool is_shield = 5;
    uint32 channel_id = 14;
}

message ChatChannelInfoNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5031;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    ChatChannelInfo channel_info = 2;
}
