syntax = "proto3";

package proto;

import "cmd/cmd_activity.proto";
import "cmd/cmd_scene.proto";
import "cmd/cmd_social.proto";
import "cmd/cmd_ugc.proto";
import "define.proto";
import "server_only/bin_common.server.proto";
import "server_only/redis_data.proto";

option go_package = "./;proto";

enum PSRequstReason {
    PS_REASON_NONE = 0;
    PS_REASON_FRIEND_LIST = 1;
    PS_REASON_APPLY_ENTER_MP = 2;
    PS_REASON_BLACK_LIST = 3;
}

enum FriendBriefRequestReason {
    FRIEND_BRIEF_REASON_NONE = 0;
    FRIEND_BRIEF_REASON_BLESSING_ACTIVITY = 1;
    FRIEND_BRIEF_REASON_PLANT_FLOWER_ACTIVITY = 2;
    FRIEND_BRIEF_REASON_WINTER_CAMP_ACTIVITY = 3;
    FRIEND_BRIEF_REASON_GACHA_ACTIVITY = 4;
    FRIEND_BRIEF_REASON_VINTAGE_ACTIVITY = 5;
}

enum SaveCustomDungeonType {
    SAVE_CUSTOM_DUNGEON_NONE = 0;
    SAVE_CUSTOM_DUNGEON_ROOM = 1;
    SAVE_CUSTOM_DUNGEON_SETTING = 2;
}

enum CustomDungeonSocialUpdateType {
    CUSTOM_DUNGEON_SOCIAL_UPDATE_NONE = 0;
    CUSTOM_DUNGEON_SOCIAL_UPDATE_STORE = 1;
    CUSTOM_DUNGEON_SOCIAL_UPDATE_PLAY = 2;
    CUSTOM_DUNGEON_SOCIAL_UPDATE_LIKE = 3;
}

enum CustomDungeonBriefGetType {
    CUSTOM_DUNGEON_BRIEF_GET_NONE = 0;
    CUSTOM_DUNGEON_BRIEF_GET_MY = 1;
    CUSTOM_DUNGEON_BRIEF_GET_STORE = 2;
    CUSTOM_DUNGEON_BRIEF_GET_SEARCH = 3;
    CUSTOM_DUNGEON_BRIEF_GET_GM_SCORE = 4;
}

message AddAskFriendNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10872;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 source_id = 1;
}

message ServerGetPlayerFriendListReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10898;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }
}

message ServerGetPlayerFriendListRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10812;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 1;
    repeated uint32 friend_uid_list = 2;
    repeated uint32 ask_add_friend_uid_list = 3;
    repeated uint32 blacklist_uid_list = 4;
    repeated uint32 psn_friend_uid_list = 5;
    repeated uint32 psn_blacklist_uid_list = 6;
}

message ServerGetSocialDetailReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10807;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 target_uid = 1;
}

message ServerGetSocialDetailRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10821;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 1;
    SocialDetail social_detail = 2;
}

message ServerAskAddFriendReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10803;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 target_uid = 1;
}

message ServerAskAddFriendRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10890;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 1;
    uint32 target_uid = 2;
}

message ServerDealAddFriendReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10873;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 target_uid = 1;
    DealAddFriendResultType deal_add_friend_result = 2;
}

message ServerDealAddFriendRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10899;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 1;
    uint32 target_uid = 2;
    DealAddFriendResultType deal_add_friend_result = 3;
    uint32 target_friend_num = 4;
    FriendBrief target_friend_brief = 5;
}

message ServerDeleteFriendReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10831;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 target_uid = 1;
}

message ServerDeleteFriendRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10875;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 1;
    uint32 target_uid = 2;
    uint32 target_friend_num = 3;
}

message ServerSetSignatureReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10881;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    string signature = 1;
}

message ServerSetSignatureRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10805;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 1;
    string signature = 2;
}

message ServerGetPlayerFriendBriefReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10847;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated uint32 friend_uid_list = 1;
}

message ServerGetPlayerFriendBriefRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10839;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 1;
    repeated FriendBrief friend_brief_list = 2;
}

message SeverGetPS4FriendUidReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10853;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated string psn_id_list = 1;
    PSRequstReason request_reason = 2;
}

message SeverGetPS4FriendUidRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10822;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 1;
    repeated uint32 uid_id_list = 2;
    PSRequstReason request_reason = 3;
    repeated FriendBrief friend_brief_list = 4;
}

message SyncPlayerBriefNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10865;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    PlayerBasicBriefData basic_brief_data = 1;
    PlayerMpBriefData mp_brief_data = 2;
    PlayerSocialBriefData social_brief_data = 3;
    PlayerHomeBriefData home_brief_data = 4;
}

message ServerAddBlacklistReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10804;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 target_uid = 1;
    bool is_friend = 2;
}

message ServerAddBlacklistRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10893;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 1;
    FriendBrief target_friend_brief = 2;
}

message ServerRemoveBlacklistReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10827;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 target_uid = 1;
}

message ServerRemoveBlacklistRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10894;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 1;
    uint32 target_uid = 2;
}

message ServerGetRecentMpPlayerListReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10888;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated uint32 recent_player_uid_list = 1;
}

message ServerGetRecentMpPlayerListRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10826;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 1;
    repeated FriendBrief recent_mp_player_brief_list = 2;
}

message ServerGetPlayerBlacklistReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10863;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated uint32 blacklist_uid_list = 1;
}

message ServerGetPlayerBlacklistRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10895;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 1;
    repeated FriendBrief blacklist = 2;
}

message ServerPrivateChatReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10806;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    ChatInfo chat_info = 1;
    bool is_ps4_friend = 2;
}

message ServerPrivateChatRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10834;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 1;
}

message ServerPullPrivateChatReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10850;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 from_uid = 1;
    uint32 to_uid = 2;
    uint32 from_sequence = 3;
    uint32 pull_num = 4;
    bool is_ps4_friend = 5;
}

message ServerPullRecentChatReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10843;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 from_sequence = 1;
    uint32 pull_num = 2;
}

message ServerUpdateActivitySocialDataNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10874;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated ActivitySocialData social_data_list = 1;
}

message ServerBlessingGetFriendPicListReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10876;
    }

    repeated uint32 friend_uid_list = 1;
    uint32 schedule_id = 2;
}

message ServerBlessingGetFriendPicListRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10846;
    }

    int32 retcode = 1;
    repeated BlessingFriendPicData friend_pic_data_list = 2;
}

message ServerGetFriendBriefReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10841;
    }

    repeated uint32 uid_list = 1;
    FriendBriefRequestReason reason = 2;
}

message ServerGetFriendBriefRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10849;
    }

    int32 retcode = 1;
    repeated FriendBrief friend_brief_list = 2;
    FriendBriefRequestReason reason = 3;
}

message ServerUpdateShowAvatarInfoNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10891;
    }

    repeated ShowAvatarInfo show_avatar_info_list = 1;
}

message ServerGetFriendShowAvatarInfoReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10824;
    }

    uint32 uid = 1;
}

message ServerGetFriendShowAvatarInfoRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10856;
    }

    int32 retcode = 1;
    uint32 uid = 2;
    repeated ShowAvatarInfo show_avatar_info_list = 3;
}

message ServerReadPrivateChatReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10842;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 from_uid = 1;
    uint32 target_uid = 2;
    bool is_ps4_friend = 3;
}

message ServerGetFriendShowNameCardInfoReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10830;
    }

    uint32 uid = 1;
}

message ServerGetFriendShowNameCardInfoRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10867;
    }

    int32 retcode = 1;
    uint32 uid = 2;
    repeated uint32 show_name_card_id_list = 3;
}

message ServerGetAskFriendBriefReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10858;
    }

    repeated uint32 ask_add_friend_uid_list = 1;
}

message ServerGetAskFriendBriefRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10870;
    }

    int32 retcode = 1;
    repeated FriendBrief ask_add_friend_brief_list = 2;
}

message ServerAddPsnFriendReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10817;
    }

    repeated uint32 force_add_psn_friend_uid_list = 1;
}

message ServerAddPsnFriendRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10802;
    }

    int32 retcode = 1;
    repeated uint32 force_add_psn_friend_uid_list = 2;
    repeated FriendBrief force_add_psn_friend_brief_list = 3;
}

message ServerAddPsnBlackReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10819;
    }

    repeated uint32 force_add_psn_black_uid_list = 1;
}

message ServerAddPsnBlackRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10861;
    }

    int32 retcode = 1;
    repeated uint32 force_add_psn_black_uid_list = 2;
}

message ServerFriendInfoChangeNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10829;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 my_uid = 1;
    string my_online_id = 2;
    repeated uint32 notify_uid_list = 3;
}

message ServerPlantFlowerGetFriendFlowerDataReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10857;
    }

    uint32 schedule_id = 1;
    uint32 friend_uid = 2;
    map<uint32, uint32> give_flower_num_map = 3;
}

message ServerPlantFlowerGetFriendFlowerDataRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10900;
    }

    int32 retcode = 1;
    uint32 schedule_id = 2;
    uint32 friend_uid = 3;
    map<uint32, uint32> give_flower_num_map = 4;
    map<uint32, uint32> have_flower_num_map = 5;
}

message ServerPlantFlowerGetFriendFlowerWishListReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10816;
    }

    uint32 schedule_id = 1;
    repeated uint32 friend_uid_list = 2;
}

message ServerPlantFlowerGetFriendFlowerWishListRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10887;
    }

    int32 retcode = 1;
    uint32 schedule_id = 2;
    repeated PlantFlowerFriendFlowerWishData friend_flower_wish_list = 3;
}

message ServerWinterCampGetFriendItemDataReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10840;
    }

    uint32 schedule_id = 1;
    uint32 friend_uid = 2;
    repeated ItemParam give_item_list = 3;
}

message ServerWinterCampGetFriendItemDataRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10818;
    }

    int32 retcode = 1;
    uint32 schedule_id = 2;
    uint32 friend_uid = 3;
    repeated ItemParam give_item_list = 4;
    repeated ItemParam friend_item_list = 5;
}

message ServerWinterCampGetFriendWishListReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10866;
    }

    uint32 schedule_id = 1;
    repeated uint32 friend_uid_list = 2;
}

message ServerWinterCampGetFriendWishListRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10868;
    }

    int32 retcode = 1;
    uint32 schedule_id = 2;
    repeated WinterCampFriendWishData wish_data_list = 3;
}

message ServerGetCustomDungeonReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10833;
    }

    uint64 dungeon_guid = 1;
    bool is_self_dungeon = 2;
    uint32 enter_type = 3;
}

message ServerCustomDungeon {
    uint64 dungeon_guid = 1;
    uint32 dungeon_id = 2;
    repeated CustomDungeonRoomRedisData room_list = 3;
    CustomDungeonSettingBin setting = 4;
    uint32 version = 5;
    bool is_liked = 6;
    uint32 first_publish_time = 7;
}

message CustomDungeonAdventure {
    ServerCustomDungeon custom_dungeon = 1;
    CustomDungeonBriefRedisData dungeon_brief = 2;
}

message ServerGetCustomDungeonRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10884;
    }

    int32 retcode = 1;
    bool is_exist = 2;
    ServerCustomDungeon custom_dungeon = 3;
    uint32 enter_type = 4;
}

message ServerSaveCustomDungeonReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10880;
    }

    ServerCustomDungeon custom_dungeon = 1;
    uint32 room_id = 2;
    bool is_ever_published = 3;
}

message ServerSaveCustomDungeonRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10889;
    }

    int32 retcode = 1;
    uint64 dungeon_guid = 2;
    uint32 room_id = 3;
    uint32 version = 4;
}

message ServerPublishCustomDungeonReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10859;
    }

    uint64 dungeon_guid = 1;
    CustomDungeonAbstractBin abstract = 2;
    uint32 deploy_score = 3;
    string creator_nickname = 4;
    uint32 group_id = 5;
    uint32 uid = 6;
    uint32 lang = 7;
    repeated uint32 tag_list = 8;
    bool is_psn_platform = 9;
}

message ServerPublishCustomDungeonRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10832;
    }

    int32 retcode = 1;
    uint64 dungeon_guid = 2;
    uint32 publish_time = 3;
}

message ServerRemoveCustomDungeonReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10860;
    }

    uint64 dungeon_guid = 1;
    uint32 group_id = 2;
}

message ServerRemoveCustomDungeonRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10814;
    }

    int32 retcode = 1;
    uint64 dungeon_guid = 2;
}

message ServerUpdateCustomDungeonSocialNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10892;
    }

    uint64 dungeon_guid = 1;
    CustomDungeonSocialUpdateType update_type = 2;
    bool is_cancel_store = 3;
    bool is_cancel_like = 4;
    bool is_win = 5;
    bool is_ever_liked = 6;
}

message ServerGetCustomDungeonBriefReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10820;
    }

    repeated uint64 dungeon_guid_list = 1;
    CustomDungeonBriefGetType get_type = 2;
}

message ServerGetCustomDungeonBriefRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10864;
    }

    int32 retcode = 1;
    repeated uint64 dungeon_guid_list = 2;
    repeated CustomDungeonBriefRedisData dungeon_brief_list = 3;
    CustomDungeonBriefGetType get_type = 4;
}

message ServerGetRecommendCustomDungeonReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10838;
    }

    repeated uint64 dungeon_guid_list = 1;
    uint32 group_id = 2;
    uint32 recommend_interval = 3;
}

message ServerGetRecommendCustomDungeonRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10811;
    }

    int32 retcode = 1;
    repeated CustomDungeonBriefRedisData dungeon_brief_list = 2;
}

message ServerAddFriendByMuipReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10844;
    }

    uint32 target_uid = 1;
}

message ServerAddFriendByMuipRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10886;
    }

    int32 retcode = 1;
    uint32 target_uid = 2;
    uint32 target_friend_num = 3;
    FriendBrief target_friend_brief = 4;
}

message ServerDelFriendByMuipReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10801;
    }

    uint32 target_uid = 1;
}

message ServerDelFriendByMuipRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10828;
    }

    int32 retcode = 1;
    uint32 target_uid = 2;
    uint32 target_friend_num = 3;
}

message ServerAddFriendAskByMuipReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10851;
    }

    uint32 target_uid = 1;
}

message ServerAddFriendAskByMuipRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10823;
    }

    int32 retcode = 1;
    uint32 target_uid = 2;
}

message ServerDelFriendAskByMuipReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10871;
    }

    uint32 target_uid = 1;
}

message ServerDelFriendAskByMuipRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10845;
    }

    int32 retcode = 1;
    uint32 target_uid = 2;
}

message ServerCustomDungeonCacheInvalidNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10808;
    }

    uint64 dungeon_guid = 1;
}

message ServerCustomDungeonSocialGmNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10809;
    }

    uint64 dungeon_guid = 1;
    uint32 update_type = 2;
    uint32 num = 3;
}

message ServerCustomDungeonFirstLikeNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10852;
    }
}

message ServerGetUgcReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10885;
    }

    UgcType ugc_type = 1;
    uint64 ugc_guid = 2;
    bool is_edit = 3;
    bool is_require_brief = 4;
    RecordUsage ugc_record_usage = 5;
}

message ServerGetUgcRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10825;
    }

    int32 retcode = 1;
    UgcType ugc_type = 2;
    uint64 ugc_guid = 3;
    bool is_edit = 4;
    bool is_exist = 5;
    RecordUsage ugc_record_usage = 6;
    UgcRedisData ugc_redis_data = 7;
    UgcBriefRedisData ugc_brief_redis_data = 8;
}

message ServerGetUgcBriefReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10878;
    }

    UgcType ugc_type = 1;
    uint64 ugc_guid = 2;
}

message ServerGetUgcBriefRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10836;
    }

    int32 retcode = 1;
    UgcType ugc_type = 2;
    bool is_exist = 3;
    UgcBriefRedisData ugc_brief_redis_data = 4;
}

message ServerMultiGetUgcBriefReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10854;
    }

    UgcType ugc_type = 1;
    repeated uint64 ugc_guid_list = 2;
}

message ServerMultiGetUgcBriefRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10883;
    }

    int32 retcode = 1;
    UgcType ugc_type = 2;
    repeated UgcBriefRedisData ugc_brief_list = 3;
}

message ServerSaveUgcReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10869;
    }

    UgcType ugc_type = 1;
    UgcRedisData ugc_redis_data = 2;
    UgcBriefRedisData ugc_brief_redis_data = 3;
}

message ServerSaveUgcRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10810;
    }

    int32 retcode = 1;
    UgcType ugc_type = 2;
    UgcBriefRedisData ugc_brief_redis_data = 3;
}

message ServerPublishUgcReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10896;
    }

    UgcType ugc_type = 1;
    UgcBriefRedisData ugc_brief_redis_data = 2;
}

message ServerPublishUgcRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10862;
    }

    int32 retcode = 1;
    UgcType ugc_type = 2;
    uint64 ugc_guid = 3;
    uint32 version = 4;
}

message ServerCheckUgcUpdateReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10815;
    }

    UgcType ugc_type = 1;
    map<uint64, uint32> ugc_guid_version_map = 2;
}

message ServerCheckUgcUpdateRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10813;
    }

    int32 retcode = 1;
    UgcType ugc_type = 2;
    repeated uint64 update_ugc_guid_list = 3;
    repeated uint64 not_find_ugc_guid_list = 4;
}

message ServerActivityGetFriendGiftDataReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10879;
    }

    uint32 schedule_id = 1;
    uint32 friend_uid = 2;
    map<uint32, uint32> give_gift_num_map = 3;
}

message ServerActivityGetFriendGiftDataRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10855;
    }

    int32 retcode = 1;
    uint32 schedule_id = 2;
    uint32 friend_uid = 3;
    map<uint32, uint32> give_gift_num_map = 4;
    map<uint32, uint32> have_gift_num_map = 5;
}

message ServerActivityGetFriendGiftWishListReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10976;
    }

    uint32 schedule_id = 1;
    repeated uint32 friend_uid_list = 2;
    FriendBriefRequestReason reason = 3;
}

message ServerActivityGetFriendGiftWishListRsp {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10968;
    }

    int32 retcode = 1;
    uint32 schedule_id = 2;
    repeated ActivityFriendGiftWishData friend_gift_wish_list = 3;
}

message SyncPlayerIpRegionNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10975;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    PlayerSocialBriefData social_brief_data = 1;
}
